--- a/src/common/common.css
+++ b/src/common/common.css
@@ -1,16 +1,17 @@
 body{
-  position: relative;
   font-size: 16px;
 }
+
 .container {
   display: flex;;
   flex-direction: column;
   justify-content: end;
   height: 150px;
   width: fit-content;
+  margin: auto;
   padding: 10px;
-  background-color: lightcoral;
-  border: 2px solid black;
+  //background-color: lightcoral;
+  //border: 2px solid black;
 }
 
 .btn {
@@ -20,6 +21,5 @@ body{
   color: white;
   background-color: darkred;
   border: none;
-
   border-radius: 10px;
 }
