--- a/src/popover/popover.css
+++ b/src/popover/popover.css
@@ -5,7 +5,9 @@
   height: fit-content;
   background-color: whitesmoke;
   border: 2px solid black;
+  border-radius: 10px;
   z-index: 1000}
+
 .popoverTitle{
   display: block;
   margin-bottom: 3px;
